# jgertm.github.io

./: .gitmodules  20201017-measuring-tcp-errors.org  20210627-integrating-babashka-with-bazel.org  Makefile  index.org  shell.nix
20210627-integrating-babashka-into-bazel/: .gitignore  BUILD.bazel  DUMMY  WORKSPACE  babashka.bzl  check_filenames.clj  get_babashka_metadata.clj  hello.clj
css/: tufte-extra.css  tufte.html5
docs/: 20201017-measuring-tcp-errors.html  20210627-integrating-babashka-with-bazel.html  CNAME  index.html  index.org  tufte.css
filters/: links-to-html.lua
